1.15    2012-06-04      Florent Angly <florent.angly@gmail.com>

    * Implemented irand() to draw random integers (bug #73298, feature requested
      by crew@cs.stanford.edu)

    * Fixed build failure on Hurd (bug #74165, reported and patched by Salvatore
      Bonaccorso)


1.14    2012-05-27      Florent Angly <florent.angly@gmail.com>

    * Fixed compilation problems with nmake on Windows platforms
      (Florent Angly, bug #74984)

    * Fixed issues with random seed (bug #77343, solution suggested by
      Laurent Dami, fix implemented by Florent Angly)


1.13    2012-01-20      Abhijit Menon-Sen <ams@toroid.org>

    * New seed generation and retrieval mechanism by Florent Angly (bug
      #64640 on rt.cpan.org).


1.12    2010-09-29      Abhijit Menon-Sen <ams@toroid.org>

    * Fix OS X build failure reported by Daniel Barker and fixed by
      Tokuhiro Matsuno.


1.11    2010-05-08      Abhijit Menon-Sen <ams@toroid.org>

    * Fix tests broken by overly optimistic floating point comparison
      and long doubles in new releases of Perl. (Thanks to Salvatore
      Bonaccorso for the report and fix.)


1.10    2009-08-06      Abhijit Menon-Sen <ams@toroid.org>

    * Compile fix for MSVC, which has no stdint.h.
      (Thanks to Taro Nishino for the report and patch.)

    (I made a mistake releasing 1.09.)


1.08    2009-08-06      Abhijit Menon-Sen <ams@toroid.org>

    * BSD license

    * Compile fix for GNU/kFreeBSD from Cyril Brulebois (via Debian)


1.07    2007-01-12      Abhijit Menon-Sen <ams@toroid.org>

    * Add the Changes file to the MANIFEST, in addition to editing it
      each time. (Thanks to John M. Gamble.)

      There have been no changes in functionality since 1.03.


1.06    2007-01-11      Abhijit Menon-Sen <ams@toroid.org>

    * Minor POD fix from Steven Schubiger.


1.05    2007-01-11      Abhijit Menon-Sen <ams@toroid.org>

    * Mingw compile fix from Steffen Mueller.

