@@ -1,3 +1,9 @@
+1.xx
+    * Fixed issue introduced in version 1.15 where rand() took no notice of
+      argument and irand() did (bug #78200, reported by David Morel)
+
+    * Migration of test suite to Test::More and Test::Number::Delta
+
 1.15    2012-06-04      Florent Angly <florent.angly@gmail.com>
 
     * Implemented irand() to draw random integers (bug #73298, feature requested
